--- a/includes/style.css
+++ b/includes/style.css
@@ -195,7 +195,9 @@ a {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.standard-box-text, p {
+.standard-box-text,
+p,
+label {
   color: white;
   margin-left: 20px;
   margin-right: 20px;
