--- a/includes/style.css
+++ b/includes/style.css
@@ -2,17 +2,9 @@
   background-image: url('../includes/Images/background.jpg');
   width: 100%;
   height: 100%;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
-  margin: 0%;
-}
-
-.tall-background-image {
-  background-image: url('../includes/Images/tall-background.png');
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 600px 600px;
   margin: 0%;
 }
 
@@ -177,16 +169,10 @@ li a:hover,
 }
 
 .standard-box {
-  display: flex;
-  flex-wrap: nowrap;
-  min-height: 700px;
-}
-
-.standard-box>div {
   background: #363636b7;
   margin-left: 200px;
   margin-right: 200px;
-  flex: 50%;
+  min-height: 100vh;
 }
 
 a {
@@ -204,7 +190,13 @@ label {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.standard-box-title {
+.standard-box-title,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: white;
   margin-left: 30px;
   margin-right: 30px;
@@ -303,31 +295,26 @@ h2#err_msg {
   font-size: 20px;
 }
 
-@media (max-width: 800px) {
-  .standard-box>div {
-    margin-left: 20px !important;
-    margin-right: 20px !important;
-  }
-
-  .standard-background>div {
-    margin-left: 20px !important;
-    margin-right: 20px !important;
+@media (max-width: 950px) {
+  .standard-box {
+    margin-left: 50px;
+    margin-right: 50px;
   }
 
   .footer-box-title-left {
-    margin-left: 30px !important;
+    margin-left: 30px;
   }
 
   .footer-box-title-right {
-    margin-left: 210px !important;
+    margin-left: 210px;
   }
 
   .footer-box-text-left {
-    margin-left: 0px !important;
+    margin-left: 0px;
   }
 
   .footer-box-text-right {
-    margin-left: 185px !important;
+    margin-left: 185px;
   }
 
   nav li {
