commented footer and header

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,25 +1,29 @@
-    <div class = "footer-box">
-        <div>
-        <p class = "footer-box-title-left">
+<div class="footer-box">
+    <div>
+        <!-- Adds title to left side of the footer -->
+        <p class="footer-box-title-left">
             Bean and Brew Socials
         </p>
-        <ul class = "footer-box-text-left">
+        <!-- Adds links to the left side of the footer -->
+        <ul class="footer-box-text-left">
             <li>
-            <a class = "footer-box-text-left" href = "#">Facebook Group</a>
+                <a class="footer-box-text-left" href="#">Facebook Group</a>
             </li>
             <li>
-            <a class = "footer-box-text-left" href = "#">Instagram Page</a>
+                <a class="footer-box-text-left" href="#">Instagram Page</a>
             </li>
             <li>
-            <a class = "footer-box-text-left" href = "#">Youtube Channel</a>
+                <a class="footer-box-text-left" href="#">Youtube Channel</a>
             </li>
         </ul>
-        </div>
-        <div>
-        <p class = "footer-box-title-right">
-             Store Locations
+    </div>
+    <div>
+        <!-- Adds title to the right side of the footer -->
+        <p class="footer-box-title-right">
+            Store Locations
         </p>
-        <ul class = "footer-box-text-right">
+        <!-- Adds links to the right side of the code -->
+        <ul class="footer-box-text-right">
             <li>
                 Harrogate
             </li>
@@ -30,7 +34,8 @@
                 Knaresborough Castle
             </li>
         </ul>
-        </div>
     </div>
+</div>
 </body>
+
 </html>
